--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,21 @@
-body{padding-top:50px !important;}
+body{padding-top:50px !important;
 
+    direction: rtl;
+}
+
+.centered{
+  text-align: center;
+}
+
+.container-fluid.percent{
+  padding-left: 15% !important;
+  padding-right: 15% !important;
+}
+
+.container-fluid.full{
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+}
 .carousel {
   height: 500px;
   margin-bottom: 50px !important;
@@ -20,4 +36,21 @@ body{padding-top:50px !important;}
   left: 0;
   min-width: 100%;
   height: 500px;
+}
+
+.seperator.transparent{
+  height:1px;
+  padding-top:100px;
+  background: rgba(0,0,0,0);
+  border:0 solid transparent;
+}
+
+
+
+
+@media (min-width: 768px) {
+.carousel-caption p {
+  margin-bottom: 20px;
+  font-size: 21px;
+  line-height: 1.4;}
 }
